<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Integral SOS</string>

    <string name="hello_world">Hello world!</string>

    <string name="empty">No entries</string>
    <string name="processing">Processing...</string>

    <string name="action_add_device">Add panel</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_user_edit">Edit</string>

    <string name="edit_tel">Phone number</string>
    <string name="edit_name">Panel name</string>
    <string name="edit_device_custom_name">Panel name</string>
    <string name="edit_zone_custom_name">Zone name</string>
    <string name="edit_user_name">User name</string>

    <string name="button_add">Add</string>

    <string name="err_must_be_filled">Must be filled</string>
    <string name="err_bad_value">Bad input value</string>
    <string name="err_too_short">Too short value</string>

    <string name="dialog_remove_title">Remove selected panel?</string>
    <string name="dialog_remove_message">You\'ll lose all data for this panel!</string>
    <string name="dialog_remove_zone_message">Remove?</string>
    <string name="dialog_remove_user_message">Remove?</string>
    <string name="dialog_device_edit_title">Panel data</string>
    <string name="dialog_zone_edit_title">Zone data</string>
    <string name="dialog_user_edit_title">User data</string>

    <string name="title_activity_main">Panels</string>
    <string name="title_activity_new_device">New Panel</string>
    <string name="title_activity_device_detail">Panel Detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="tab_device_zones">Zones</string>
    <string name="tab_device_history">History</string>
    <string name="tab_device_users">Users</string>
    <string name="tab_sound_supplied">Supplied</string>
    <string name="tab_sound_internal">Internal</string>
    <string name="tab_sound_external">External</string>

    <string name="msg_device_must_be_disarmed">Disarm panel first</string>

    <string name="pref_device_title">Panels</string>
    <string name="pref_max_history_records_title">History length</string>
    <string name="pref_sound_settings_title">Sounds</string>
    <string name="pref_uri_sound_alarm_title">Alarm</string>
    <string name="pref_uri_sound_info_title">Notification</string>
    <string name="pref_uri_sound_tick_title">Message</string>
    <string name="pref_misc_title">Misc</string>
    <string name="pref_about_app_title">About</string>

    <string name="text_view_sound_selected_label">Selected:</string>
    <string name="text_view_sound_selected_title">None</string>
    <string name="text_view_zone_link_status">Link status</string>
    <string name="text_view_zone_battery_status">Battery status</string>
    <string name="text_view_zone_tamper_status">Tamper status</string>
    <string name="text_view_zone_failure_status">Failure status</string>
    <string name="text_view_zone_no_info">No info</string>
    <string name="text_view_app_author">Alexander Pravdin</string>
    <string name="text_view_app_firm">Integral, Ltd.</string>
    <string name="text_view_credits_title">Credits:</string>

    <string name="MSG_DisarmFailure">Failed to disarm</string>
    <string name="MSG_ArmFailure">Failed to arm</string>
    <string name="MSG_Alarm">Alarm</string>
    <string name="MSG_Armed">Armed</string>
    <string name="MSG_Disarmed">Disarmed</string>
    <string name="MSG_AlarmShort">Alarm, short</string>
    <string name="MSG_AlarmTorn">Alarm, torn</string>
    <string name="MSG_StateOk">State OK</string>
    <string name="MSG_Short">Short</string>
    <string name="MSG_Torn">Torn</string>
    <string name="MSG_AutoArmed">Armed</string>
    <string name="MSG_AutoDisarmed">Disarmed</string>
    <string name="MSG_NoInfo">No info</string>
    <string name="MSG_Burglary">Burglary</string>
    <string name="MSG_Fault">Fault</string>
    <string name="MSG_NoFault">No fault</string>
    <string name="MSG_CaseOpened">Case opened</string>
    <string name="MSG_BadAC">No power</string>
    <string name="MSG_BadDC">Battery low</string>
    <string name="MSG_GoodAC">Power OK</string>
    <string name="MSG_GoodDC">Battery OK</string>
    <string name="MSG_CaseClosed">Case closed</string>
    <string name="MSG_Crash">Crash</string>
    <string name="MSG_LinkOff">Link OFF</string>
    <string name="MSG_LinkOn">Link ON</string>
    <string name="MSG_SetProg">Programmed</string>
    <string name="MSG_GrpAutoArmed">Armed</string>
    <string name="MSG_GrpAutoDisarmed">Disarmed</string>
    <string name="MSG_GrpShort">Short</string>
    <string name="MSG_GrpTorn">Torn</string>
    <string name="MSG_GrpStateOk">State OK</string>
    <string name="MSG_Version">Version</string>
    <string name="MSG_DeviceOn">Panel ON</string>
    <string name="MSG_DeviceOff">Panel OFF</string>
    <string name="MSG_Test">Test</string>
    <string name="MSG_Balance">Balance</string>

    <string name="CMD_GetState">Get state</string>
    <string name="CMD_Arm">Arm</string>
    <string name="CMD_Disarm">Disarm</string>

    <string name="DEV_UserLetter">U</string>

</resources>
