<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/image_logo"
                android:src="@drawable/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/light_blue"
                android:scaleType="center"/>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@id/image_logo"
                android:layout_alignTop="@id/image_logo"
                android:layout_alignBottom="@id/image_logo"
                android:paddingLeft="8dp">

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/app_name"
                        android:id="@+id/text_view_app_name"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="0.0.0"
                        android:id="@+id/text_view_app_version"
                        android:layout_below="@id/text_view_app_name"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_view_app_author"
                        android:id="@+id/text_view_app_author"
                        android:layout_below="@id/text_view_app_version"/>

                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_view_app_firm"
                        android:id="@+id/text_view_app_firm"
                        android:layout_below="@id/text_view_app_author"/>

        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/text_view_credits_title"
                android:id="@+id/text_view_credits_title"
                android:layout_below="@id/image_logo"/>

        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_below="@+id/text_view_credits_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/credits"
                        android:id="@+id/text_view_credits_message"
                        android:autoLink="web"/>

        </ScrollView>

</RelativeLayout>