<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_zone_no_info"
            android:text="@string/text_view_zone_no_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:visibility="gone"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:id="@+id/image_zone_link_indicator"
            android:src="@drawable/ic_action_question"
            android:scaleType="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/image_zone_link_indicator"
            android:layout_alignBottom="@id/image_zone_link_indicator"
            android:id="@+id/text_view_zone_link_status"
            android:text="@string/text_view_zone_link_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/image_zone_link_indicator"
            android:layout_alignParentRight="true"
            android:id="@+id/image_zone_battery_indicator"
            android:src="@drawable/ic_action_question"
            android:scaleType="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_zone_link_status"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/image_zone_battery_indicator"
            android:layout_alignBottom="@id/image_zone_battery_indicator"
            android:id="@+id/text_view_zone_battery_status"
            android:text="@string/text_view_zone_battery_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/image_zone_battery_indicator"
            android:layout_alignParentRight="true"
            android:id="@+id/image_zone_power_indicator"
            android:src="@drawable/ic_action_question"
            android:scaleType="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_zone_battery_status"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/image_zone_power_indicator"
            android:layout_alignBottom="@id/image_zone_power_indicator"
            android:id="@+id/text_view_zone_power_status"
            android:text="@string/text_view_zone_power_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/image_zone_power_indicator"
            android:layout_alignParentRight="true"
            android:id="@+id/image_zone_tamper_indicator"
            android:src="@drawable/ic_action_question"
            android:scaleType="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_zone_power_status"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/image_zone_tamper_indicator"
            android:layout_alignBottom="@id/image_zone_tamper_indicator"
            android:id="@+id/text_view_zone_tamper_status"
            android:text="@string/text_view_zone_tamper_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/image_zone_tamper_indicator"
            android:layout_alignParentRight="true"
            android:id="@+id/image_zone_failure_indicator"
            android:src="@drawable/ic_action_question"
            android:scaleType="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_zone_tamper_status"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/image_zone_failure_indicator"
            android:layout_alignBottom="@id/image_zone_failure_indicator"
            android:id="@+id/text_view_zone_failure_status"
            android:text="@string/text_view_zone_failure_status"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:ellipsize="end"/>

</RelativeLayout>